[package]
name = "todolist"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen-futures = "0.4.56"
web-sys = "0.3.83"
stylist = { version = "0.13.0", features = ["yew_integration"] }
gloo-console = "0.3.0"
gloo-storage = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.42"
